--- a/config.json
+++ b/config.json
@@ -26,12 +26,12 @@
                 "type": "neural_net",
                 "alpha": 1e-6,
                 "hidden_layer_sizes": "auto",
-                "learning_rate_init": 0.008,
-                "max_iter": 50000,
+                "learning_rate_init": 0.0008,
+                "max_iter": 500000,
                 "batch_size": 32,
                 "tol": 1e-6,
                 "n_iter_no_change": 250,
-                "verbose": false
+                "verbose": true
             },
             "datagrabber_class": "GERCasesDataGrabber",
             "grab_data_from_server": true,
@@ -39,7 +39,7 @@
             "days_to_predict": 30
         },
         {
-            "enabled": false,
+            "enabled": true,
             "model_name": "Germany Cases Polyreg",
             "model": {
                 "type": "regression",
@@ -48,7 +48,7 @@
             "datagrabber_class": "GERCasesDataGrabber",
             "grab_data_from_server": true,
             "offline_dataset_date": "2020-09-21",
-            "days_to_predict": 10
+            "days_to_predict": 30
         },        
         {
             "enabled": false,
